<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:fillViewport="true" android:layout_alignParentBottom="true"  >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_margin="20dp"
                android:paddingBottom="50dp"
                android:id="@+id/linearLayout">

            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editStoreId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="number"
                    android:hint="@string/storeId"
                    android:text="641"/>
            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextStoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="text"
                    android:hint="@string/storeName"
                    android:text="PinkMart"
                    />


            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/amount"
                    android:text="123"/>

            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextOrderRef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="text"
                    android:hint="@string/orderRefNum"
                    android:text="hashTest"/>


            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:text="test@gmail.com"/>


            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:digits="01234567890+-"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:text="03453101535"/>

            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextBankIdentifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="text"
                    android:hint="@string/bankIdentifierNum"
                    android:text=""/>

            <EditText
                    android:id="@+id/editTextSecretKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="text"
                    android:text="RbExWZGjSNpb4xjkU9fyH1I3glvdCk9XrMgpZ/ApvKv86t4963pq/r1x+HIMs0uZPnRGfsyegfLpBrMqhcD3I3i4j/OjJaZt8we9skIHTY4TjvVopLpLRaFEymanAOxuSA2hdS0jj9TF46kKHMdrQfNRGBCuAun4CFXJ5+kuyhE9PeBpRoLsrH25ORH8ZV49WzCLbB3AMVJrmso9MevI0w=="
                    android:hint="Enter Hash Key"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    >

                <TextView
                        android:id="@+id/tvTitle_PaymentMethod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="Select Payment Method"
                        android:layout_margin="2dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerPaymentMethod"
                        android:textSize="14sp"
                        android:background="@drawable/spinner_bg_"/>

            </LinearLayout>

            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextTokenExpiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="text"
                    android:text=""
                    android:hint="@string/expiryDate"/>

            <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                    android:id="@+id/editTextURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:inputType="text"
                    android:visibility="visible"
                    android:text="https://easypaystg.easypaisa.com.pk/easypay-service/rest"/>

            <Switch
                    android:id="@+id/editableSwitchBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Editable"
                    android:ems="10"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="start"
                    android:checked="false"/>

            <Button
                    android:id="@+id/proceedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proceedCheckout"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerInParent="true"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp"
                    android:weightSum="1">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_margin="2dp"
                        android:text="SDK Version "
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:ems="10"/>

                <TextView
                        android:id="@+id/versionCodeTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_margin="2dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:ems="10"/>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>



</RelativeLayout>
